sand-macros/tests/cases/fail_run_fn_empty.rs
use sand_macros::run_fn;

fn main() {
    let _ = run_fn!("" {});
}
